testsuite/tests/typecheck/should_fail/T5978.stderr
T5978.hs:22:11: error: [GHC-39999]
    • No instance for ‘C Double Char’ arising from a use of ‘polyBar’
    • In the expression: polyBar id monoFoo
      In an equation for ‘monoBar’: monoBar = polyBar id monoFoo

